# trademind

./: CMakeLists.txt
include/core/: FIXEngine.h
src/: main.cpp
